[package]
name = "format-json"
version = "0.1.1"
authors = ["Balazs Horvath"]
edition = "2024"
description = "A CLI tool for recursively formatting JSON files."
license = "MIT"
repository = "https://github.com/rakki194/format-json"
homepage = "https://github.com/rakki194/format-json"
documentation = "https://docs.rs/format-json"
keywords = ["json", "formatter", "cli", "recursive", "batch"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
xio = { path = "../xio", version = "0.1.3" }
dset = { path = "../dset", version = "0.1.3" }
serde_json = "1.0.138"
walkdir = "2.5.0"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }

[dev-dependencies]
tempfile = "3.17.0"
